--- a/package.json
+++ b/package.json
@@ -1,22 +1,47 @@
 {
-  "name": "ecs-benchmark",
-  "version": "1.0.0",
-  "description": "A like for like comparison between Entity Component System (ECS) Libraries in the JS/TS Ecosystem",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "test": "vitest",
-    "start": "vitest bench"
-  },
-  "author": {
-    "name": "Bob Chatman",
-    "email": "bob.chatman@gmail.com",
-    "url": "http://gneu.org"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "vitest": "^1.6.0"
-  }
+    "name": "ecs-benchmark",
+    "version": "1.0.0",
+    "description": "A like for like comparison between Entity Component System (ECS) Libraries in the JS/TS Ecosystem",
+    "main": "index.js",
+    "directories": {
+        "doc": "docs"
+    },
+    "scripts": {
+        "test": "vitest",
+        "start": "vitest bench"
+    },
+    "author": {
+        "name": "Bob Chatman",
+        "email": "bob.chatman@gmail.com",
+        "url": "http://gneu.org"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20.13.0",
+        "@vitest/coverage-v8": "^1.6.0",
+        "@vitest/ui": "^1.6.0",
+        "@vitest/web-worker": "^1.6.0",
+        "typescript": "^5.4.5",
+        "vitest": "^1.6.0"
+    },
+    "dependencies": {
+        "@javelin/ecs": "^1.0.0-alpha.13",
+        "@lastolivegames/becsy": "^0.15.5",
+        "ape-ecs": "^1.3.1",
+        "bitecs": "^0.3.40",
+        "ecsy": "^0.4.2",
+        "goodluck": "^7.0.0",
+        "harmony-ecs": "^0.0.12",
+        "miniplex": "^2.0.0",
+        "nano-ecs": "^2.4.0",
+        "perform-ecs": "^0.7.8",
+        "picoes": "^1.1.1",
+        "piecs": "^0.4.0",
+        "sim-ecs": "^0.6.4",
+        "thyseus": "^0.18.0",
+        "tiny-ecs": "^2.0.0",
+        "uecs": "^0.4.2",
+        "wolf-ecs": "^2.1.3",
+        "yagl-ecs": "^1.1.0"
+    }
 }
