fix: fixing file naming collision & update baseline

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -36,4 +36,5 @@ jobs:
       - name: Save Summary
         uses: actions/upload-artifact@v4
         with:
+          name: results.${{ matrix.node-version }}.json
           path: reports/results.json
