--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [lts, latest]
+        node-version: [current, latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
